# recipe-suggestion-chatbot

./: README.md  docker-compose.yaml  index.html  package.json  script.js
backend/: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/chatbot/: chatgpt.py  urls.py  utils.py  views.py
backend/chatbot/tests/: conftest.py  test_chatbot.py  test_urls.py  test_views.py
backend/core/: settings.py  urls.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  script.js  style.css
