[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kadir Burak Gündüz <kadir.burak.gunduz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
django-extensions = "^3.2.1"
Werkzeug = "^2.2.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
