[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kadir Burak Gündüz <kadir.burak.gunduz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
django-extensions = "^3.2.1"
Werkzeug = "^2.2.3"
requests = "^2.28.2"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
openai = "^0.27.4"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py", "tests/*.py"]
